# AlmKanal

./: .coverage.psy25331.is.sbg.ac.at.27009.XxLGEwdx  .coveragerc  .gitignore  AlmKanal.py  CONTRIBUTING.md  LICENSE  README.md  calc_headmodels.py  event_utils.py  pixi.toml  preproc_sbg_raw.py  pyproject.toml  raw_cleaner.py  src_utils.py
.github/workflows/: test.yml
AlmKanal/: AlmKanal.py  __init__.py  __version__.py
AlmKanal/data_utils/: check_data.py
AlmKanal/preproc_utils/: event_utils.py  ica_utils.py  raw_eye_cleaner.py
AlmKanal/src_utils/: headmodel_utils.py  src_utils.py
almkanal/: __init__.py  __version__.py  almkanal.py  almkanal_functions.py  almkanal_tng.py
almkanal/almkanal_steps/: bio_utils.py  channel_utils.py  epoch_utils.py  event_utils.py  filter_utils.py  ica_utils.py  spatial_filter_utils.py  src_recon_utils.py  trf_utils.py
almkanal/data_utils/: almkanal_objs.py  check_data.py  data_classes.py  info_generator.py
almkanal/mixins/: event_mixins.py
almkanal/plotting_utils/: plotting_utils.py
almkanal/preproc_utils/: bio_utils.py  channel_utils.py  epoch_utils.py  event_utils.py  eye_utils.py  filter_utils.py  ica_utils.py  maxwell_utils.py
almkanal/report/: exporting.py  methods_context.py  rendering.py
almkanal/report/stepspecs/: __init__.py  bio_specs.py  channel_specs.py  epoch_specs.py  filter_specs.py  ica_specs.py  registry.py  source_reconstruction.py  src_specs.py
almkanal/report/templates/: methods_master.j2
almkanal/report/templates/steps/: EpochTRF.j2  Epochs.j2  Events.j2  Filter.j2  ForwardModel.j2  ICA.j2  Maxwell.j2  MultiBlockMaxwell.j2  PhysioCleaner.j2  RANSAC.j2  Resample.j2  SourceReconstruction.j2  SpatialFilter.j2  default.j2
almkanal/src_utils/: headmodel_utils.py  spatial_filter_utils.py  src_recon_utils.py  src_utils.py
almkanal/stim_utils/: audio_utils.py
data_utils/: check_data.py  data_classes.py
old/: preproc_sbg_raw.py  raw_cleaner.py
preproc_utils/: event_utils.py  ica_utils.py  src_utils.py
src_utils/: headmodel_utils.py  src_utils.py
template_pipelines/: markov_pipeline.py  report_raw.html  report_raw2.html  resting_pipeline.py  step_example.py  test_ak_new.py
tests/: __init__.py  conftest.py  second_workflow_test.py  settings.py  test_almkanal_tng.py  test_bio.py  test_empty_room.py  test_epoched.py  test_ica.py  test_ica2.py  test_raw.py  test_raw_workflow.py  test_stepsec_registry.py  test_stepspec_filter_eve_epo.py  test_stepspec_fwd_filt_src.py  test_stepspec_ica.py  test_tica2.py
utils/: head_model_utils.py  ica_utils.py  maxwell_utils.py  plotting_utils.py  src_utils.py
